--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: Workflow Run RO-Crate
+title: <a href="/workflow-run-crate/">Workflow Run RO-Crate</a>
 description: RO-Crate profiles to capture the provenance of workflow runs
