--- a/docs/examples/draft/galaxy-collection-wf-crate/workflows/2154bc930d1891d1.gxwf.yml
+++ b/docs/examples/draft/galaxy-collection-wf-crate/workflows/2154bc930d1891d1.gxwf.yml
@@ -5,7 +5,7 @@ creator:
 - class: Organization
   name: Paul
 license: MIT
-uuid: 099bb091-2158-4983-b093-0cd22e32dcb3
+uuid: a7b8315e-0bd7-486b-8e8c-02a52b79269f
 inputs:
   input collection 1:
     type: collection
@@ -50,21 +50,20 @@ steps:
     tool_state:
       advanced:
         conflict:
-          __current_case__: 0
-          duplicate_options: suffix_conflict
-          suffix_pattern: _#
+          __current_case__: 3
+          duplicate_options: keep_first
       inputs:
       - __index__: 0
         input:
-          __class__: ConnectedValue
+          __class__: RuntimeValue
       - __index__: 1
         input:
-          __class__: ConnectedValue
+          __class__: RuntimeValue
     in:
-      inputs_1|input:
-        source: input collection 2
       inputs_0|input:
         source: input collection 1
+      inputs_1|input:
+        source: input collection 2
   concat collection:
     tool_id: cat_collection
     tool_version: 1.0.0
@@ -74,7 +73,7 @@ steps:
       top: 147.96875
     tool_state:
       input1:
-        __class__: RuntimeValue
+        __class__: ConnectedValue
     in:
       input1:
         source: merge collections tool
@@ -87,11 +86,11 @@ steps:
       top: 120.453125
     tool_state:
       input:
-        __class__: RuntimeValue
+        __class__: ConnectedValue
       lineNum:
         __class__: ConnectedValue
     in:
-      lineNum:
-        source: num_lines_param
       input:
         source: concat collection/out_file1
+      lineNum:
+        source: num_lines_param
