Re-run everything from scratch, try to fix the input and output parameters, handle missing start/end times, and the additional/encoding of files

--- a/docs/examples/autosubmit/auto-mhm-test-domains/conf/minimal.yml
+++ b/docs/examples/autosubmit/auto-mhm-test-domains/conf/minimal.yml
@@ -7,7 +7,7 @@ CONFIG:
   MAXWAITINGJOBS: 20
 DEFAULT:
   # Job experiment ID.
-  EXPID: "a00d"
+  EXPID: "a000"
   # Default HPC platform name.
   HPCARCH: "local"
   #hint: use %PROJDIR% to point to the project folder (where the project is cloned)
