--- a/docs/examples/autosubmit/auto-mhm-test-domains/workflow.yml
+++ b/docs/examples/autosubmit/auto-mhm-test-domains/workflow.yml
@@ -1,7 +1,7 @@
 DEFAULT:
-  EXPID: a00d
+  EXPID: a000
   HPCARCH: local
-  CUSTOM_CONFIG: /home/bdepaula/autosubmit/a00d/proj/git_project/conf/bootstrap
+  CUSTOM_CONFIG: /home/kinow/autosubmit/a000/proj/git_project/conf/bootstrap
 EXPERIMENT:
   DATELIST: 19910101 19930101
   CALENDAR: standard
@@ -97,21 +97,21 @@ PLATFORMS:
   LOCAL:
     TYPE: ps
     HOST: localhost
-    USER: bdepaula
+    USER: kinow
     ADD_PROJECT_TO_HOST: false
     SCRATCH_DIR: /tmp/local/
   REMOTE:
     TYPE: ps
     HOST: localhost
-    USER: bdepaula
+    USER: kinow
     ADD_PROJECT_TO_HOST: false
     SCRATCH_DIR: /tmp/remote/
 MHM:
   BRANCH_NAME: develop
   DOMAIN: 1
   EVAL_PERIOD_DURATION_YEARS: 2
-ROOTDIR: /home/bdepaula/autosubmit/a00d
-PROJDIR: /home/bdepaula/autosubmit/a00d/proj/project_files
+ROOTDIR: /home/kinow/autosubmit/a000
+PROJDIR: /home/kinow/autosubmit/a000/proj/project_files
 CONFIG:
   AUTOSUBMIT_VERSION: 4.0.0b
   TOTALJOBS: 20
@@ -126,4 +126,4 @@ GIT:
   PROJECT_SUBMODULES: ''
   FETCH_SINGLE_BRANCH: true
 AS_TEMP:
-  FILENAME_TO_LOAD: /home/bdepaula/.config/autosubmit/platforms.yml
+  FILENAME_TO_LOAD: /home/kinow/.config/autosubmit/platforms.yml
