Updated WOMBAT-Pipelines example

--- a/docs/examples/WfExS-backend/wombat-pipelines_provenance/workflow/nextflow.config
+++ b/docs/examples/WfExS-backend/wombat-pipelines_provenance/workflow/nextflow.config
@@ -17,6 +17,7 @@ params {
     parameters = null
     run_statistics = true
     add_decoys = true
+    sdrf_mapping = null
 
     // --- Workflow-specific options
     // -- Maxquant workflow
@@ -109,6 +110,15 @@ profiles {
         singularity.enabled    = true
         singularity.autoMounts = true
         singularity.runOptions = '--writable-tmpfs'
+        docker.enabled         = false
+        podman.enabled         = false
+        shifter.enabled        = false
+        charliecloud.enabled   = false
+    }
+    apptainer {
+        apptainer.enabled    = true
+        apptainer.autoMounts = true
+        apptainer.runOptions = '--writable-tmpfs'
         docker.enabled         = false
         podman.enabled         = false
         shifter.enabled        = false
